    * consolidated multi-stage limit operators into 2 variants of
      limit(R (*f)(C...), C...) where C is a parameter-pack of either
      discontinuous or mixed/continuous types; discrete advice can now be
      curryed into f
    * several optimizations regarding copying of temporaries and arithmetical
      operators
    * iRRAM_exec is a template taking an arbitrary functional object
  * multi-thread support:
    * no explicit dependency on (p)threads anymore -> allow builds on Windows
    * gather (most of) iRRAM's state into one TLS variable -> tiny speedup
  * SWITCHES are the preferred means of manipulating iRRAM's state now
    * introduce 'relaxed' and 'limit_computation'
    * removed precision_policy(int)
  * bug fixes:
    * examples/harmonic.cc: div-by-zero
    * lipschitz_1p_1a: on_domain parameter order
    * limit_mv: caching of multi-value choice parameter
    * RATIONAL: comparison operator declarations
    * RATIONAL: infinite loop in operator=(int)
  * code cosmetics: CR LF -> LF; indentation; etc.
    * hide more internal symbols (more explicitely to come later)

Jan 2013
  Many major changes: 
    Removal of all backends with exception of MPFR
    Restructuring the directory structure
    Preparations for a "usual" installation process

Sep 2009
  Several internal changes and simplifications leading to a threadsafe version
  Initial interface to using threads
  Correction of a small bug concerning I/O when working outside of the iRRAM
  Replacing references to GMP and MPFR to their newest versions.

Aug 2009
  Correction of a silly bug in the interface to MPFR on 64-bit machines

Nov 2008
  Correction of a silly bug concerning scaling of rational numbers

Sep 2007
  Using gcc 4.2.1, activating the sse2 extension did not work as before.
  Now there is a configure option "-disable-sse2" that can be used on older machines without sse2

Aug 2006 - Aug 2007
  Corrected sign errors in the intialization of RATIONAL (only showed up using 64bit) 